RESOLVED FIXED80368
pinch-to-zoom and double-tap flicker when using the new scrolling model
https://bugs.webkit.org/show_bug.cgi?id=80368
Summary pinch-to-zoom and double-tap flicker when using the new scrolling model
Anders Carlsson
Reported 2012-03-05 19:45:40 PST
pinch-to-zoom and double-tap flicker when using the new scrolling model
Attachments
Patch (13.66 KB, patch)
2012-03-05 19:55 PST, Anders Carlsson
no flags
Patch (14.06 KB, patch)
2012-03-05 20:23 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-03-05 19:55:39 PST
Build Bot
Comment 2 2012-03-05 20:17:33 PST
Anders Carlsson
Comment 3 2012-03-05 20:23:03 PST
Sam Weinig
Comment 4 2012-03-05 20:28:40 PST
Comment on attachment 130275 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=130275&action=review > Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:141 > +static void dispatchBackToMainThread(uint64_t webPageID, uint64_t callbackID) Please consider renaming this to dispatchForceRepaintBackToMainThread or something like that. Or just add a fixme about adding barriers/fences.
Anders Carlsson
Comment 5 2012-03-05 20:33:58 PST
mitz
Comment 6 2012-03-05 20:35:12 PST
Comment on attachment 130275 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=130275&action=review > Source/WebCore/platform/graphics/ca/mac/TileCache.mm:95 > + IntRect scaledRect = rect; > + scaledRect.scale(m_scale); IntRect::scale() truncates the origin and the size. I think this can cause problems.
Note You need to log in before you can comment on or make changes to this bug.